--- a/ELOdatabase/pom.xml
+++ b/ELOdatabase/pom.xml
@@ -14,27 +14,35 @@
   		<version>4.0.5</version>
   	</dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
     <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <version>20090211</version>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
     </dependency>
     <dependency>
       <groupId>net.dv8tion</groupId>
       <artifactId>JDA</artifactId>
       <version>5.0.0-beta.2</version> 
     </dependency>
+  
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>
   </dependencies>
-
+<build>
   <plugins>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-compiler-plugin</artifactId>
       <version>2.5.1</version>
       <configuration>
-        <source>1.7</source>
-        <target>1.7</target>
+        <source>1.8</source>
+        <target>1.8</target>
       </configuration>
     </plugin>
   </plugins>
+  </build>
 </project>
