--- a/ELOdatabase/pom.xml
+++ b/ELOdatabase/pom.xml
@@ -31,6 +31,22 @@
       <artifactId>gson</artifactId>
       <version>2.8.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.14</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.3</version>
+  </dependency>
+  <dependency>
+    <groupId>com.opencsv</groupId>
+    <artifactId>opencsv</artifactId>
+    <version>3.7</version>
+  </dependency>
+    
   </dependencies>
 <build>
   <plugins>
