--- a/ELOdatabase/pom.xml
+++ b/ELOdatabase/pom.xml
@@ -21,6 +21,11 @@
       <version>1.1.1</version>
     </dependency>
     <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.5.4</version>
+  </dependency>
+    <dependency>
       <groupId>net.dv8tion</groupId>
       <artifactId>JDA</artifactId>
       <version>5.0.0-beta.2</version> 
